cabal-version:      3.0

name:               zkfold-base
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

author:             Vladimir Sinyakov
maintainer:         info@zkfold.io

build-type:         Simple

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NumericUnderscores,
      OverloadedStrings,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeFamilies,
      ViewPatterns

library
    import: options
    exposed-modules:
      ZkFold.Base.Algebra.Basic.Class
      ZkFold.Base.Algebra.Basic.Field
      ZkFold.Base.Algebra.Basic.Permutations
      ZkFold.Base.Algebra.EllipticCurve.BLS12_381
      ZkFold.Base.Algebra.EllipticCurve.Class
      ZkFold.Base.Algebra.Polynomials.Multivariate
      ZkFold.Base.Algebra.Polynomials.Multivariate.Internal
      ZkFold.Base.Algebra.Polynomials.Univariate
      ZkFold.Base.Data.ByteString
      ZkFold.Base.Protocol.ARK.BabyHyrax
      ZkFold.Base.Protocol.ARK.HyperPlonk
      ZkFold.Base.Protocol.ARK.Lasso
      ZkFold.Base.Protocol.ARK.Nova
      ZkFold.Base.Protocol.ARK.Plonk
      ZkFold.Base.Protocol.ARK.Plonk.Internal
      ZkFold.Base.Protocol.Commitment.KZG
      ZkFold.Base.Protocol.Commitment.Sona
      ZkFold.Base.Protocol.NonInteractiveProof
      ZkFold.Prelude
      ZkFold.Symbolic.Cardano.Types
      ZkFold.Symbolic.Cardano.Types.Address
      ZkFold.Symbolic.Cardano.Types.Script
      ZkFold.Symbolic.Cardano.Types.Tx
      ZkFold.Symbolic.Cardano.Types.TxOut
      ZkFold.Symbolic.Cardano.Types.Value
      ZkFold.Symbolic.Cardano.UPLC
      ZkFold.Symbolic.Cardano.UPLC.Builtins
      ZkFold.Symbolic.Cardano.UPLC.Inference
      ZkFold.Symbolic.Cardano.UPLC.Inference.Internal
      ZkFold.Symbolic.Cardano.UPLC.Term
      ZkFold.Symbolic.Cardano.UPLC.Type
      ZkFold.Symbolic.Compiler
      ZkFold.Symbolic.Compiler.ArithmeticCircuit
      ZkFold.Symbolic.Compiler.ArithmeticCircuit.Combinators
      ZkFold.Symbolic.Compiler.ArithmeticCircuit.Instance
      ZkFold.Symbolic.Compiler.ArithmeticCircuit.Internal
      ZkFold.Symbolic.Compiler.ArithmeticCircuit.Map
      ZkFold.Symbolic.Compiler.Arithmetizable
      ZkFold.Symbolic.Data.Bool
      ZkFold.Symbolic.Data.Conditional
      ZkFold.Symbolic.Data.DiscreteField
      ZkFold.Symbolic.Data.Eq
      ZkFold.Symbolic.Data.List
      ZkFold.Symbolic.Data.Ord
      ZkFold.Symbolic.Data.UInt
      ZkFold.Symbolic.GroebnerBasis
      ZkFold.Symbolic.GroebnerBasis.Internal
      ZkFold.Symbolic.GroebnerBasis.Internal.Reduction
      ZkFold.Symbolic.GroebnerBasis.Internal.Types
      ZkFold.Symbolic.GroebnerBasis.Types
      ZkFold.Symbolic.Types
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                      ,
      bytestring                                 ,
      containers                                 ,
      cryptohash-sha256                          ,
      fixed-length                               ,
      mtl                                        ,
      non-empty                                  ,
      pretty-simple                              ,
      QuickCheck                                 ,
      random                                     ,
      tfp                                        ,
    hs-source-dirs: src

test-suite zkfold-base-test
    import: options
    type: exitcode-stdio-1.0
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules:
      Tests.Arithmetization
      Tests.Arithmetization.Test1
      Tests.Arithmetization.Test2
      Tests.Arithmetization.Test3
      Tests.Field
      Tests.GroebnerBasis
      Tests.Group
      Tests.NonInteractiveProof
      Tests.Pairing
      Tests.Permutations
      Tests.Plonk
      Tests.Scripts.LockedByTxId
      Tests.Univariate
    build-depends:
      base                          >= 4.9 && < 5,
      containers                                 ,
      hspec                                      ,
      QuickCheck                                 ,
      zkfold-base                                ,
    hs-source-dirs: tests

test-suite zkfold-base-examples
    import: options
    type: exitcode-stdio-1.0
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules:
      Examples.Eq
      Examples.Fibonacci
      Examples.LEQ
      Examples.MiMCHash
      Examples.MiMC.Constants
      Examples.ReverseList
    build-depends:
      base                          >= 4.9 && < 5,
      containers                                 ,
      cryptohash-sha256                          ,
      directory                                  ,
      fixed-length                               ,
      tfp                                        ,
      zkfold-base                                ,
    hs-source-dirs: examples
