cabal-version:      3.0

name:               zkfold-crypto
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

author:             Vladimir Sinyakov
maintainer:         info@zkfold.io

build-type:         Simple

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NumericUnderscores,
      OverloadedStrings,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeFamilies,
      ViewPatterns

library
    import: options
    exposed-modules:
      ZkFold.Crypto.Algebra.Basic.Class
      ZkFold.Crypto.Algebra.Basic.Field
      ZkFold.Crypto.Algebra.EllipticCurve.BLS12_381
      ZkFold.Crypto.Algebra.EllipticCurve.Class
      ZkFold.Crypto.Algebra.Polynomials.GroebnerBasis
      ZkFold.Crypto.Algebra.Polynomials.GroebnerBasis.Internal
      ZkFold.Crypto.Algebra.Polynomials.GroebnerBasis.Internal.Reduction
      ZkFold.Crypto.Algebra.Polynomials.GroebnerBasis.Internal.Types
      ZkFold.Crypto.Algebra.Polynomials.GroebnerBasis.Types
      ZkFold.Crypto.Data.Bool
      ZkFold.Crypto.Data.Conditional
      ZkFold.Crypto.Data.Eq
      ZkFold.Crypto.Data.Ord
      ZkFold.Crypto.Data.Symbolic
      ZkFold.Crypto.Protocol.Arithmetization.Plonk
      ZkFold.Crypto.Protocol.Arithmetization.R1CS
      ZkFold.Crypto.Protocol.ARK.BabyHyrax
      ZkFold.Crypto.Protocol.ARK.HyperPlonk
      ZkFold.Crypto.Protocol.ARK.Lasso
      ZkFold.Crypto.Protocol.ARK.Nova
      ZkFold.Crypto.Protocol.ARK.Plonk
      ZkFold.Crypto.Protocol.Commitment.KZG
      ZkFold.Crypto.Protocol.Commitment.Sona
      ZkFold.Crypto.Protocol.PIOP.Multivariate.Plonk
      ZkFold.Crypto.Protocol.PIOP.Univariate.Plonk
      ZkFold.Prelude
    build-depends:
      base                          >= 4.9 && < 5,
      containers                                 ,
      mtl                                        ,
      pretty-simple                              ,
    hs-source-dirs: src

test-suite zkfold-crypto-test
    import: options
    type: exitcode-stdio-1.0
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules:
      Examples.Fibonacci
      Examples.MiMCHash
      Examples.MiMC.Constants
      Tests.Arithmetization
      Tests.Arithmetization.Test1
      Tests.Arithmetization.Test2
      Tests.GroebnerBasis
      Tests.Utility.Types
    build-depends:
      base                          >= 4.9 && < 5,
      containers                                 ,
      zkfold-crypto                              ,
    hs-source-dirs: test