cabal-version:      3.0

name:               zkfold-crypto
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

author:             Vladimir Sinyakov
maintainer:         info@zkfold.io

build-type:         Simple

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NumericUnderscores,
      OverloadedStrings,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeFamilies,
      ViewPatterns

library
    import: options
    exposed-modules:
      ZkFold.Cardano.Types
      ZkFold.Base.Algebra.Basic.Class
      ZkFold.Base.Algebra.Basic.Field
      ZkFold.Base.Algebra.EllipticCurve.BLS12_381
      ZkFold.Base.Algebra.EllipticCurve.Class
      ZkFold.Base.Algebra.Polynomials.GroebnerBasis
      ZkFold.Base.Algebra.Polynomials.GroebnerBasis.Internal
      ZkFold.Base.Algebra.Polynomials.GroebnerBasis.Internal.Reduction
      ZkFold.Base.Algebra.Polynomials.GroebnerBasis.Internal.Types
      ZkFold.Base.Algebra.Polynomials.GroebnerBasis.Types
      ZkFold.Base.Data.Bool
      ZkFold.Base.Data.Conditional
      ZkFold.Base.Data.Eq
      ZkFold.Base.Data.Ord
      ZkFold.Base.Data.PartialOrder
      ZkFold.Base.Protocol.Arithmetization.Plonk
      ZkFold.Base.Protocol.Arithmetization.R1CS
      ZkFold.Base.Protocol.ARK.BabyHyrax
      ZkFold.Base.Protocol.ARK.HyperPlonk
      ZkFold.Base.Protocol.ARK.Lasso
      ZkFold.Base.Protocol.ARK.Nova
      ZkFold.Base.Protocol.ARK.Plonk
      ZkFold.Base.Protocol.Commitment.KZG
      ZkFold.Base.Protocol.Commitment.Sona
      ZkFold.Base.Protocol.PIOP.Multivariate.Plonk
      ZkFold.Base.Protocol.PIOP.Univariate.Plonk
      ZkFold.Prelude
    build-depends:
      base                          >= 4.9 && < 5,
      containers                                 ,
      mtl                                        ,
      pretty-simple                              ,
      random                                     ,
    hs-source-dirs: src

test-suite zkfold-crypto-test
    import: options
    type: exitcode-stdio-1.0
    ghc-options: -rtsopts
    main-is: Main.hs
    other-modules:
      Examples.Fibonacci
      Examples.MiMCHash
      Examples.MiMC.Constants
      Examples.VestingScript
      Tests.Arithmetization
      Tests.Arithmetization.Test1
      Tests.Arithmetization.Test2
      Tests.Arithmetization.Test3
      Tests.GroebnerBasis
      Tests.Utility.Types
    build-depends:
      base                          >= 4.9 && < 5,
      containers                                 ,
      zkfold-crypto                              ,
    hs-source-dirs: test